package core;

public interface  Explorable {
    String explore();
}
