package transport;

public enum EngineTypes {
    BURNER,
    WATER_ENGINE,
    MODIFIED_WATER_ENGINE,
}
