package transport;

public enum TransportTypes {
    AUTOMOBILE,
    BALLOON
}
