
@startuml NeznaikaModel

abstract class Statusable {
    - m_status: String
    - m_on_status_change: Consumer<Statusable>

    + onStatusChange(callback: Consumer<Statusable>): Statusable
    # m_setStatus(new_status: String): void
}

interface Actionable {
    + start(): void
    + stop(): void
    + action(): void
}

interface Explorable {
    + explore(): String
}

interface Comparable<T> {
    + compareTo(other: T): int
}

abstract Character {
    + name: String
    - feeling: Feeling
    - wish: Wish

    + Character(name: String)
    + setFeeling(feeling: Feeling): void
    + setWish(wish: Wish): void
    + boardTransport(tr: Transport): void
    + leaveTransport(tr: Transport): void
    + driveTransport(tr: Transport, distance: int): void
    + see(obj: Explorable): void
    + compareTo(other: Character): int
    + toString(): String
}

enum Feeling {
    NORMAL
    FEAR
    HAPPY
    SAD
    EXCITED
}

enum Wish {
    FLY
    EXPLORE
    RELAX
    TRAVEL
    INVENT
    DRIVE
}

class Dunno {
    + Dunno()
}

class Smarty {
    - m_automobile_counter: int
    - m_quality: double

    + Smarty()
    + inventTransport(type: TransportTypes): Transport
}

class Dowel {
    + Dowel()
}

class Screw {
    + Screw()
}

enum TransportTypes {
    AUTOMOBILE
    BALLOON
}

abstract Transport {
    + type: TransportTypes
    - m_parameters: Parameters
    - m_engine: Engine
    - m_mileage: int
    - m_passengers: HashSet<Character>
    - m_reliability: double

    + Transport(type: TransportTypes, params: Parameters, engine: Engine, reliability: double)
    + Transport(type: TransportTypes, params: Parameters, engine: Engine)
    + getCaption(): String
    + getParameters(): Parameters
    + getEngineParameters(): Engine.Parameters
    + getEngineType(): EngineTypes
    + getMileage(): int
    + addPassenger(passenger: Character): void
    + removePassenger(passenger: Character): void
    + isPassenger(passenger: Character): boolean
    + explore(): String
    + action(): void
    + compareTo(other: Transport): int
    + toString(): String
}

struct Parameters {
    + model: String
    + capacity: int
    + grace: int
    + resource: int
}

class Balloon {
    + Balloon(params: Parameters, engine: Engine, reliability: double)
    + Balloon(params: Parameters, engine: Engine)
    + start(): void
    + action(): void
    + stop(): void
}

class Automobile {
    + Automobile(params: Parameters, engine: Engine, reliability: double)
    + Automobile(params: Parameters, engine: Engine)
    + start(): void
    + action(): void
    + stop(): void
}

enum EngineTypes {
    BURNER
    WATER_ENGINE
    MODIFIED_WATER_ENGINE
}

enum Fuel {
    WATER
    HEATED_WATER
    GAS
}

abstract Engine {
    + type: EngineTypes
    + parameters: Parameters
    - m_state: boolean

    + Engine(type: EngineTypes, params: Parameters)
    + start(): void
    + stop(): void
    + isWorking(): boolean
    + toString(): String
}

struct Engine_Parameters {
    + power: int
    + fuel: Fuel
}

class Burner {
    + Burner(params: Parameters)
    + start(): void
    + stop(): void
}

class WaterEngine {
    + WaterEngine(params: Parameters)
    + WaterEngine(type: EngineTypes, params: Parameters)
    + start(): void
    + stop(): void
}

class ModifiedWaterEngine {
    + ModifiedWaterEngine(params: Parameters)
}

class ScriptException {
    + ScriptException()
    + ScriptException(message: String)
    + ScriptException(message: String, cause: Throwable)
}

class BreakException {
    + BreakException()
    + BreakException(message: String)
    + BreakException(message: String, cause: Throwable)
}

Character --|> Statusable
Character ..|> Comparable
Character --> Feeling
Character --> Wish
Character --> Transport

Dunno --|> Character
Smarty --|> Character
Dowel --|> Character
Screw --|> Character

Transport --|> Statusable
Transport ..|> Actionable
Transport ..|> Explorable
Transport ..|> Comparable
Transport --> TransportTypes
Transport --> Parameters
Transport --> Engine
Transport --> Character

Balloon --|> Transport
Automobile --|> Transport

Engine --|> Statusable
Engine --> EngineTypes
Engine --> Engine_Parameters
Engine --> Fuel

Burner --|> Engine
WaterEngine --|> Engine
ModifiedWaterEngine --|> WaterEngine

@enduml